# SCoBots

./: .gitignore  .gitmodules  .pylintrc  DGX_README.md  Dockerfile  Dockerfile.baselines  Dockerfile.extract  Dockerfile.noisybaselines  LICENSE  README.md  README_interpreter.md  README_render_pythonfile.md  README_viper.md  baseline_test.py  download_agents.bsh  eval.py  extract_viper_denormalized.py  ff_pruner.py  hyperparams.txt  interpreter_extract.py  pong.rules  pong_no_enemy.rules  pruning_results.md  pyproject.toml  remixtest.py  render_agent.py  replace_state_variables.py  requirements.txt  rules.py  run_extract.sh  setup.py  setup_pretrained.sh  test.py  test_wrapper.py  timing_test.py  train.py  tree2code.py  tree2code_viper.py  tree2code_viper_fast.py  tree2code_viper_readable.py  (+4 more)
baselines/: aggregate.ipynb  curve_data_to_plot.npy  curves.ipynb  denorm_ruleset.py  eval.py  eval_all.py  extract_generate_samples.py  requirements.txt  rules.py  scores_to_hm.py  train.py  viper.py  visualize.ipynb
configs/: ben-dr-pong-v1.yaml  exp2-gen-pong-v1.yaml  exp2-gen-tennis-v1.yaml  exp2-re-pong-v2-2.yaml  exp2-re-pong-v2-3.yaml  exp2-re-pong-v2.yaml  exp2-re-tennis-v2-2.yaml  exp2-re-tennis-v2-3.yaml  exp2-re-tennis-v2.yaml  exp3-mdr-boxing.yaml  exp3-mdr-tennis.yaml  exp4-re-pong-pig1.yaml  exp4-re-pong-ptr12-3.yaml  exp4-re-pong-ptr12-4.yaml  exp4-re-pong-ptr12.yaml  exp5-re-pong-2.yaml  exp5-re-pong-ptr-2.yaml  exp6-gen-pong-lin.yaml  exp6-gen-tennis-lin.yaml  exp6-re-pong-lin-2.yaml  exp7-gen-boxing.yaml  exp7-re-boxing-2.yaml  exp7-re-boxing-3.yaml  exp7-re-boxing-lin-2.yaml  exp7-re-boxing-lin-3.yaml  exp7-re-boxing-lin.yaml  exp7-re-boxing.yaml  exp7-re-demon.yaml  gen-bowling-nd.yaml  gen-bowling-r.yaml  gen-bowling.yaml  gen-boxing-r.yaml  gen-coinrun-l.yaml  gen-coinrun.yaml  gen-pong-r.yaml  gen-pong-raw.yaml  gen-pong-v1.yaml  gen-skiing-nd.yaml  gen-skiing-r.yaml  gen-tennis-r.yaml  (+25 more)
docker/: .dockerignore  Dockerfile  Dockerfile.baselines
eclaire_configs/: config_eclaire_Boxing_s42_re_pr-ext_OCAtariinput_1l-v3.yaml  config_eclaire_Boxing_s42_re_pr-ext_OCAtariinput_2l-v3.yaml  config_eclaire_Boxing_s42_re_pr-ext_SPACEinput_1l-v3.yaml  config_eclaire_Boxing_s42_re_pr-ext_SPACEinput_2l-v3.yaml  config_eclaire_Boxing_s42_re_pr-nop_OCAtariinput_1l-v3.yaml  config_eclaire_Boxing_s42_re_pr-nop_OCAtariinput_2l-v3.yaml  config_eclaire_Boxing_s42_re_pr-nop_SPACEinput_1l-v3.yaml  config_eclaire_Boxing_s42_re_pr-nop_SPACEinput_2l-v3.yaml  config_eclaire_Pong_s42_re_pr-ext_OCAtariinput_1l-v3.yaml  config_eclaire_Pong_s42_re_pr-ext_OCAtariinput_2l-v3.yaml  config_eclaire_Pong_s42_re_pr-ext_SPACEinput_1l-v3.yaml  config_eclaire_Pong_s42_re_pr-ext_SPACEinput_2l-v3.yaml  config_eclaire_Pong_s42_re_pr-nop_OCAtariinput_1l-v3.yaml  config_eclaire_Pong_s42_re_pr-nop_OCAtariinput_2l-v3.yaml  config_eclaire_Pong_s42_re_pr-nop_SPACEinput_1l-v3.yaml  config_eclaire_Pong_s42_re_pr-nop_SPACEinput_2l-v3.yaml  eclaire_base_config.py
eclaire_utils/: utils.py
experiments/: README.md  actions_for_states.py  collect_states_and_actions.py  denorm_ruleset.py  discover.py  eval.py  experimental_kl_divergence_approx.py  explain.py  fnames.py  focusfile_pruner.py  hyperparams.txt  kill_batch.sh  obs.npy  (+9 more)
(+342 files in other folders)
