[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scobi"
version = "0.1.0"
authors = [
    {name = "Quentin", email = "quentin.delfosse@cs.tu-darmstadt.de"},
    {name = "Sebastian", email = "sebastian.sztwiertnia@stud.tu-darmstadt.de"},
]
description = "tbd"
keywords = ["t", "b", "d"]
license = {text = "tbd"}
requires-python = ">=3.8"
dependencies = [
    "captum>=0.7.0",
    "colormath>=3.0.0",
    "gymnasium[accept-rom-license,atari]==0.28.1",
    "huggingface-hub>=0.27.0",
    "joblib>=1.4.2",
    "notebook>=7.3.1",
    "numpy<2.0",
    "ocatari",
    "opencv-python>=4.8.1.78",
    "pandas>=2.0.3",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "rtpt>=0.0.4",
    "scikit-learn==1.3.2",
    "stable-baselines3==2.0.0",
    "tensorboard>=2.14.0",
    "termcolor>=2.4.0",
    "torch==2.0.1",
    "torchinfo",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
    "ocatari @ git+https://github.com/k4ntz/OC_Atari@ns_impl",
]

#[project.urls]
#Homepage = "tbd"
#Documentation = "tbd"
#Repository = "tbd"
#Changelog = "tbd"

[tool.setuptools.packages.find]
where = ["."]
include = ["scobi*"]
namespaces = false

[tool.setuptools.package-data]
scobi = ["resources/*.ttf"]
